# Qubic-SmartGuard

./: .env.example  .gitignore  FINAL_INTEGRATION_SUMMARY.md  LICENSE  MESSAGE_TO_TEAM_LEADER.md  PACKAGE_SUMMARY.txt  PR_DESCRIPTION.md  README.md  README_SMARTGUARD.md  SMARTGUARD_FINAL_DELIVERY.md  SMARTGUARD_INTEGRATION_GUIDE.md  SMARTGUARD_INTEGRATION_SUMMARY.md  advanced_real_test.py  app.py  demo_real_execution.ps1  example_code.cpp  project_status_check.py  qubic_real_execution.py  quick_real_test.py  real_qubic_integration.py  real_qubic_python_integration.py  real_world_smartguard_test.py  requirements.txt  smartguard_final_demo.py  smartguard_integration.py  smartguard_integration_demo.py  timeout_success_demo.py
files/: qubiclogo.jfif
qubic-cli/: K12AndKeyUtil.h  argparser.h  global.h  main.cpp  realExecution.h  structs.h
smartcontract-test/: CONTRACT_COMPILATION_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  PUSH_TO_SMARTGUARD.md  README_QUBIC_INTEGRATION.md  SMARTGUARD_PRODUCTION_PACKAGE.md  SMARTGUARD_QUICK_START.md  SMARTGUARD_UPLOAD_INSTRUCTIONS.md  qubic_audit_output_20250707_214328.json  qubic_audit_output_20250707_215135.json  test_mutual_exclusivity.cpp  test_mutual_exclusivity_args.cpp  test_workflow.ps1  testnet.conf
smartcontract-test/qubic-cli/: contractUtils.cpp  contractUtils.h  testnetUtils.cpp  testnetUtils.h
smartcontract-test/smart-contract/: CMakeLists.txt  contract_clean.h  deploy.ps1  deploy.sh  deploy_simple.ps1  main.cpp  qubic.h
smartguard-package/: smartguard_production_validation.py
smartguard-package/qubic-cli/: CMakeLists.txt  (+2 more)
(+5 files in other folders)
